syntax = "proto3";
package stratagems;
option go_package = "stratagems/";

message HelldiverRequest {
    string id = 1;
    int32 at = 2;
    int32 mp = 3;
}

message SuperEarthAnswer {
    bool status = 1;
}

message QuitMessage {
    string message = 1;
}

service SuperEarthService {
    rpc Resupply(HelldiverRequest) returns (SuperEarthAnswer) {}
    rpc EndServer(QuitMessage) returns (QuitMessage) {}
}
